movie-recommender/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-movies.leenet.link
spec:
  hosts:
  - "movies.leenet.link"
  gateways:
  - neon-ingress/leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: movie-recommender.leenet.svc.cluster.local
          port:
            number: 2361
